--- a/notebooks/analys.ipynb
+++ b/notebooks/analys.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "id": "2a971f8e",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "0bba3520",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "6bc83b79",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "d35ddf74",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "6b12e652",
    "metadata": {},
    "outputs": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "id": "dac7ff0b",
    "metadata": {},
    "outputs": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "id": "d2a038a3",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "id": "330a2428",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 9,
    "id": "a89bfb4f",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "6f543d8d",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
       "Medle systolic bp icke-rökare är: 149.05\n",
       "T-statistik: 0.450\n",
       "P-värde (ensidigt): 0.3264\n",
-      "Beslut: Kan inte förkasta nollhypotesen (H0).\n",
+      "Beslut: Hypotesen stämmer\n",
       "Slutsats: Det finns statistiskt stöd för att rökare har högre systolic bp än icke-rökare\n"
      ]
     }
@@ -421,9 +421,9 @@
     "alpha = 0.05\n",
     "\n",
     "if p_value_one_sided < alpha and mean_smokers > mean_non_smokers:\n",
-    "    print(\"Beslut: Förkasta nollhypotesen (H0).\")\n",
+    "    print(\"Beslut: Hypotesen stämmer inte!\")\n",
     "else:\n",
-    "    print(\"Beslut: Kan inte förkasta nollhypotesen (H0).\")\n",
+    "    print(\"Beslut: Hypotesen stämmer!\")\n",
     "\n",
     "\n",
     "if p_value_one_sided > alpha:\n",
